pom java version changed from 11 to 8